# soddy

./: .gitignore  README.md  soddy.cabal  stack.yaml
src/: HierarchicalHexlet.hs  HierarchicalHexlet2.hs  HierarchicalSteiner3D.hs  HierarchicalSteiner3D2.hs  Soddy.hs  Soddy2.hs  Soddy3.hs  Soddy4.hs  Soddy5.hs  Soddy6.hs  SoddyHierarchical.hs  SoddyHierarchical2.hs  Spheres.hs  Steiner3D.hs  Steiner3D2.hs
src-exe/: ExeSoddyHierarchical.hs
src/Utils/: Circumsphere.hs
