name:                soddy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/soddy#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Spheres
                     , Utils.Circumsphere
                     , Soddy
                     , Soddy2
                     , Soddy3
                     , Soddy4
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , gl-capture
                     , bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

executable soddy
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeSoddy.hs
  ghc-options:         -fllvm -main-is ExeSoddy
  build-depends:       base >= 4.7 && < 5
                     , soddy
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/stla/soddy
